# EIP6492-Signature-Verifier

./: .gitignore  LICENSE  README.md  pyproject.toml
erc6492_signature_verifier/: binary_data.py  concat.py  signature_verifier.py
examples/: example.py
src/: __init__.py  signature_verifier.py
src/contracts/: UniversalSigValidator.sol  ValidateSigOffchain.sol
src/utils/: hash_msg.py
